# pwsafe

./: .travis.yml  LICENSE  README.md  package.yaml  pwedit.sh  pwsafe.cabal  tinc.freeze
bash_completion.d/: pwsafe
src/: Action.hs  Cipher.hs  Config.hs  Database.hs  Lock.hs  Main.hs  Options.hs  Run.hs  Util.hs
test/: ActionSpec.hs  CipherSpec.hs  DatabaseSpec.hs  LockSpec.hs  OptionsSpec.hs  Spec.hs
test/data/: keyring.gpg  pubring.gpg  trustdb.gpg
test/dot-gnupg/: secring.gpg
tests/: LockTest.hs  Main.hs  Spec.hs  runtests.sh
