name:             pwsafe
version:          0.0.0
stability:        experimental
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       simon.hengel@wiktory.org
build-type:       Simple
cabal-version:    >= 1.6

executable pwsafe
  ghc-options:    -Wall
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  base, process, filepath, network, containers, directory, deepseq, hsini, unix >= 0.1.999
