name:             pwsafe
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

executable pwsafe
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base
    , transformers
    , process
    , filepath
    , network
    , directory
    , deepseq
    , unix
    , config-ng
  main-is:
      Main.hs

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base
    , hspec-shouldbe
    , stringbuilder
    , QuickCheck
    , bytestring
    , knob
